# ascend-community

./: .gitignore  CONTRIBUTE.md  README.md
ottos-oranges/: .gitignore  README.md  ascend_project.yaml  dev.py  justfile  pyproject.toml
ottos-oranges/flows/datagen/components/: expand.py  seed.py  task.py  walk.py
ottos-oranges/flows/quickstart/components/: azure_reader.yaml  my_python_transform.py  sample_sql_transform.sql.jinja
ottos-oranges/holding/events/: email.py  social.py  store.py  telemetry.py  website.py
ottos-oranges/holding/synthetic/: base.py  common.py  run.py  seed.py
ottos-oranges/lake/seed/: orange_farms.csv  orange_stores.csv  orange_types.csv  orange_warehouses.csv
ottos-oranges/old_stuff/datagen/components/: fake.py
ottos-oranges/old_stuff/old_project/: ascend_project.yaml
ottos-oranges/old_stuff/old_project/connections/: duckdb_data_plane.yaml
ottos-oranges/old_stuff/old_project/flows/quickstart/components/: my_python_transform.py
ottos-oranges/profiles/: dev.yaml
ottos-oranges/projects/bigquery-dev/connections/: gs_lake.yaml  output_csvs.yaml
ottos-oranges/projects/bigquery-dev/flows/quickstart/components/: grouped_store.py  int_email.py  int_social.py  int_website.py  read_test.yaml  (+8 more)
ottos-oranges/projects/bigquery-dev/profiles/: dev.yaml
ottos-oranges/projects/bigquery/automations/: test.yaml  weekly.yaml
ottos-oranges/projects/bigquery/profiles/: dev.yaml
ottos-oranges/projects/fabric/: README.md
ottos-oranges/projects/snowflake-dev/: ascend_project.yaml
ottos-oranges/projects/snowflake-dev/connections/: az_lake.yaml  gs_lake.yaml
ottos-oranges/projects/snowflake-dev/profiles/: dev.yaml
ottos-oranges/projects/snowflake/connections/: gcs_lake.yaml
ottos-oranges/projects/snowflake/profiles/: dev.yaml
ottos-oranges/projects/snowflake/snowflake-dev/connections/: az_lake.yaml
ottos-oranges/projects/snowflake/snowflake-dev/profiles/: dev.yaml
ottos-oranges/src/ottos_oranges/: cli.py  datagen.py
ottos-oranges/src/ottos_oranges/lib/: synthetic.py  transform.py
ottos-oranges/src/ottos_oranges/sources/: common.py  email.py  social.py  store.py  telemetry.py  website.py
ottos-oranges/src/ottos_oranges/ui/: cli.py
(+771 files in other folders)
